added initial question

--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -436,7 +436,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing differences in Taxi and Uber usage\n"
+    "# Initial Question\n",
+    "\n",
+    "We want to first determine whether the launch of Uber affected the business of Taxis in the first 9 months."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing differences in Taxi and Uber usage\n",
+    "\n",
+    "We partition the points into rectangular bins and draw heat-maps of the differences in the histograms we obtain from these bins to give us an idea of the area where one service outperforms the other."
    ]
   },
   {
@@ -582,7 +593,7 @@
    "source": [
     "The above heat-maps show particular areas where usage patterns have changed significantly for taxis. The value of norms of these differences indicate that more areas have lost demand compared to the ones that have improved over one year. This remains valid for larger sample sizes as well.\n",
     "\n",
-    "Moreover, the heat-map for heavy usage of taxis in 2011 v/s 2012 is similar to the one for Uber v/s Taxi. This means the launch of Uber is a probably cause for that decrease in taxis in such areas."
+    "Moreover, the heat-map for heavy usage of taxis in 2011 v/s 2012 is similar to the one for Uber v/s Taxi. This means the launch of Uber is a probably cause for that decrease in taxis in such areas. Thus, our initial question about the impact of Uber on the Taxi business is resolved reasonably well."
    ]
   },
   {
