added contents, readme, final touches, conclusion to be added

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -26,11 +26,15 @@
     "# Contents\n",
     "\n",
     "* [Related Work](#Related-Work)\n",
-    "* [Data Loading](#Loading-Data)\n",
-    "* [Data Cleaning](#Data-Cleaning)\n",
-    "* [Raw Data Visualization](#Visualizing-raw-data)\n",
-    "* [Initial Question](#Initial-Question)\n",
-    "* [Temporal Analysis](#Temporal-Analysis)\n"
+    "* [Data Collection](#Data-Collection)\n",
+    "* [Raw Data Visualization](#Raw-Data-Visualization)\n",
+    "* [Effect of Uber launch on Taxi business](#Effect-of-Uber-launch-on-Taxi-business)\n",
+    "* [Finding busy intersections using Street Data](#Finding-busy-intersections-using-Street-Data)\n",
+    "* [Density of Trips close to subways](#Density-of-Trips-close-to-subways)\n",
+    "* [Duration of Trip Prediction](#Duration-of-Trip-Prediction)\n",
+    "* [Temporal Analysis](#Temporal-Analysis)\n",
+    "* [Die Hard: Can John make it?](#diehard)\n",
+    "* [Conclusion](#Conclusion)"
    ]
   },
   {
@@ -89,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data\n",
+    "# Data Collection\n",
     "\n",
     "We have shape files for the geographical boundaries and csv files for the rest of the point datasets. Geopandas has compact functions to read from these and store in a Pandas series-like object."
    ]
@@ -117,15 +121,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning\n",
+    "## Data Cleaning\n",
     "\n",
     "The Taxi dataset we are looking was released by the NYC Taxi and Limousine Commission 2013 . \n",
     "The dataset contains the following fields:\n",
     "\n",
     "```medallion, hack_license, vendor_id, rate_code, store_and_fwd_flag, pickup_datetime, dropoff_datetime, passenger_count, trip_time_in_secs, trip_distance, pickup_longitude, pickup_latitude, dropoff_longitude, dropoff_latitude.```\n",
     "\n",
-    "Since we only deal with pickup positions (at this point), we can remove all the other columns.\n",
-    "\n",
+    "Since we only deal with pickup positions (at this point), we can remove all the other columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sampling\n",
     "Since the dataset is quite large, we also need to randomly sample a smaller set for our purposes. We do this by shuffling the csv file and taking only the top `lim` rows.\n",
     "\n",
@@ -135,7 +144,7 @@
     "tail -n +2 taxi_before.csv\n",
     "gshuf -n 10000 taxi_before_w.csv > taxi_before_final.csv\n",
     "echo 'pickup_longitude,pickup_latitude' | cat - taxi_before_final.csv > tmp && mv tmp taxi_before_final.csv\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -495,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing raw data"
+    "# Raw Data Visualization"
    ]
   },
   {
@@ -682,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing differences in Taxi and Uber usage\n",
+    "## Visualizing differences in Taxi and Uber usage\n",
     "\n",
     "We partition the points into rectangular bins and draw heat-maps of the differences in the histograms we obtain from these bins to give us an idea of the area where one service outperforms the other."
    ]
@@ -719,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing differences in usage of Taxis before and after launch of Uber\n",
+    "## Visualizing differences in usage of Taxis before and after launch of Uber\n",
     "\n",
     "Uber was launched in NYC in **May 2011**. Since the data for Uber is not available for the time period immediately after its launch, we can use the taxi data for that time to analyze the impact of Uber on taxi demand. We have compared data from **Feb 2011** to **Feb 2012** to eliminate any seasonal effects and to account for the time it took for Uber usage to grow after its launch."
    ]
@@ -800,9 +809,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Street Data - Finding busy intersections\n",
+    "<a href='#streets'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding busy intersections using Street Data\n",
     "\n",
-    "We use OpenStreetMap street data to find: **Which intersections are the most frequently picked up from?**"
+    "Next, we use OpenStreetMap street data to find: **Which intersections are the most frequently picked up from?**"
    ]
   },
   {
@@ -851,19 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[((u'Madison Avenue', u'Park Avenue'), 24), ((u'5th Avenue', u'Madison Avenue'), 14), ((u'Lexington Avenue', u'Park Avenue'), 13), ((u'1st Avenue', u'2nd Avenue'), 11), ((u'6th Avenue', u'West 57th Street'), 10), ((u'Hudson Street', u'West Street'), 10), ((u'2nd Avenue', u'3rd Avenue'), 10), ((u'3rd Avenue', u'Lexington Avenue'), 10), ((u'6th Avenue', u'West 54th Street'), 9), ((u'West Broadway', u'West Houston Street'), 9), ((u'6th Avenue', u'West 53rd Street'), 9), ((u'Central Park West', u'West 72nd Street'), 7), ((u'5th Avenue', u'West 23rd Street'), 7), ((u'7th Avenue', u'West 14th Street'), 7), ((u'5th Avenue', u'Broadway'), 7), ((u'West 14th Street', u'West 15th Street'), 7), ((u'Joe DiMaggio Highway', u'West End Avenue'), 7), ((u'Avenue A', u'Avenue B'), 7), ((u'Broome Street', u'West Broadway'), 7), ((u'East 57th Street', u'Madison Avenue'), 7)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Citation: looping over geopandas dataframe, idea from: http://stackoverflow.com/questions/30740046/calculate-distance-to-nearest-feature-with-geopandas\n",
     "uber1k = uber[:1000]\n",
@@ -875,7 +883,166 @@
     "    unique = []\n",
     "    dedup = [unique.append(item) for item in l if item not in unique]\n",
     "    listIntersections.append(tuple(sorted([unique[0],unique[1]])))\n",
-    "print Counter(listIntersections).most_common(20)"
+    "c = Counter(listIntersections).most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Intersection</th>\n",
+       "      <th>Rides</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Madison Avenue and Park Avenue</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5th Avenue and Madison Avenue</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lexington Avenue and Park Avenue</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1st Avenue and 2nd Avenue</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6th Avenue and West 57th Street</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Hudson Street and West Street</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2nd Avenue and 3rd Avenue</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3rd Avenue and Lexington Avenue</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6th Avenue and West 54th Street</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>West Broadway and West Houston Street</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6th Avenue and West 53rd Street</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Central Park West and West 72nd Street</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>5th Avenue and West 23rd Street</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7th Avenue and West 14th Street</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5th Avenue and Broadway</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>West 14th Street and West 15th Street</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Joe DiMaggio Highway and West End Avenue</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Avenue A and Avenue B</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Broome Street and West Broadway</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>East 57th Street and Madison Avenue</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Intersection  Rides\n",
+       "0             Madison Avenue and Park Avenue     24\n",
+       "1              5th Avenue and Madison Avenue     14\n",
+       "2           Lexington Avenue and Park Avenue     13\n",
+       "3                  1st Avenue and 2nd Avenue     11\n",
+       "4            6th Avenue and West 57th Street     10\n",
+       "5              Hudson Street and West Street     10\n",
+       "6                  2nd Avenue and 3rd Avenue     10\n",
+       "7            3rd Avenue and Lexington Avenue     10\n",
+       "8            6th Avenue and West 54th Street      9\n",
+       "9      West Broadway and West Houston Street      9\n",
+       "10           6th Avenue and West 53rd Street      9\n",
+       "11    Central Park West and West 72nd Street      7\n",
+       "12           5th Avenue and West 23rd Street      7\n",
+       "13           7th Avenue and West 14th Street      7\n",
+       "14                   5th Avenue and Broadway      7\n",
+       "15     West 14th Street and West 15th Street      7\n",
+       "16  Joe DiMaggio Highway and West End Avenue      7\n",
+       "17                     Avenue A and Avenue B      7\n",
+       "18           Broome Street and West Broadway      7\n",
+       "19       East 57th Street and Madison Avenue      7"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intersectDf = pd.DataFrame(c,columns=['Intersection','Rides'])\n",
+    "intersectDf['Intersection'] = intersectDf['Intersection'].apply(lambda x: x[0]+' and '+x[1])\n",
+    "intersectDf"
    ]
   },
   {
@@ -1048,10 +1215,8 @@
     "def getFourSquareFeature(Lat, Lon,hist, xedges,yedges):\n",
     "    num_x = len(xedges)\n",
     "    num_y = len(xedges)\n",
-    "#     print num_x,num_y\n",
     "    idx_x = get_index(Lon,xedges)\n",
     "    idx_y = get_index(Lat,yedges)\n",
-    "#     print idx_x,idx_y, hist.shape\n",
     "    if idx_x==0 or idx_y==0 or idx_x==num_x or idx_y==num_y:\n",
     "        return 0\n",
     "    else:\n",
@@ -1559,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1609,24 +1774,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>76744.01</td>\n",
+       "      <td>0.438</td>\n",
+       "      <td>[4, 5, 9, 11]</td>\n",
+       "      <td>manhattan distance + timestamp features</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>69696.88</td>\n",
        "      <td>0.490</td>\n",
        "      <td>[6]</td>\n",
        "      <td>only google maps api travel time</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>68263.69</td>\n",
        "      <td>0.500</td>\n",
        "      <td>[4, 5, 6]</td>\n",
        "      <td>manhattan distance+google maps api travel time</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>76744.01</td>\n",
-       "      <td>0.438</td>\n",
-       "      <td>[4, 5, 9, 11]</td>\n",
-       "      <td>manhattan distance + timestamp features</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1644,22 +1809,22 @@
        "0  137405.47         -0.006                            [0, 1, 2, 3]   \n",
        "1   79802.00          0.416                                  [4, 5]   \n",
        "2   79802.15          0.416                                    [10]   \n",
-       "3   69696.88          0.490                                     [6]   \n",
-       "4   68263.69          0.500                               [4, 5, 6]   \n",
-       "5   76744.01          0.438                           [4, 5, 9, 11]   \n",
+       "3   76744.01          0.438                           [4, 5, 9, 11]   \n",
+       "4   69696.88          0.490                                     [6]   \n",
+       "5   68263.69          0.500                               [4, 5, 6]   \n",
        "6   64350.51          0.529  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]   \n",
        "\n",
        "                              Feature Description  \n",
        "0                                only coordinates  \n",
        "1                  only difference in coordinates  \n",
        "2                         only manhattan distance  \n",
-       "3                only google maps api travel time  \n",
-       "4  manhattan distance+google maps api travel time  \n",
-       "5         manhattan distance + timestamp features  \n",
+       "3         manhattan distance + timestamp features  \n",
+       "4                only google maps api travel time  \n",
+       "5  manhattan distance+google maps api travel time  \n",
        "6                                    all features  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,12 +1847,27 @@
     "regrResults.append(trainAndPrintResults([0,1,2,3],'only coordinates'))\n",
     "regrResults.append(trainAndPrintResults([4,5],'only difference in coordinates'))\n",
     "regrResults.append(trainAndPrintResults([10],'only manhattan distance'))\n",
+    "regrResults.append(trainAndPrintResults([4,5,9,11],'manhattan distance + timestamp features'))\n",
     "regrResults.append(trainAndPrintResults([6],'only google maps api travel time'))\n",
     "regrResults.append(trainAndPrintResults([4,5,6],'manhattan distance+google maps api travel time'))\n",
-    "regrResults.append(trainAndPrintResults([4,5,9,11],'manhattan distance + timestamp features'))\n",
     "regrResults.append(trainAndPrintResults([i for i in range(0,12)],'all features'))\n",
     "resDf = pd.DataFrame(regrResults,columns=['MSE','Variance Score','Feature Indices','Feature Description'])\n",
     "resDf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inferences about features\n",
+    "The lower the MSE and the higher the variance score of the model, the better it's predictions.\n",
+    "\n",
+    "These results indicate the following:\n",
+    "\n",
+    "1. Predicting the mean doesn't give good results since the true distribution of travel times is quite skewed.\n",
+    "2. Coordinates alone are not able to predict the duration even though the difference between these pairs of features is a good predictor.\n",
+    "3. The travel time retrieved from Google Maps API does much better predictions than simply the Manhattan (L1) distance between the pickup and dropoff locations.\n",
+    "4. The good features (GMaps and coordinate differences) work well together but don't provide much marginal benefit over the single best feature."
    ]
   },
   {
@@ -1696,7 +1876,7 @@
     "collapsed": true
    },
    "source": [
-    "## Temporal Analysis\n",
+    "# Temporal Analysis\n",
     "\n",
     "We are also interested in seeing the differences between taxi and uber usage at different times of day and different days of the week."
    ]
@@ -1786,6 +1966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='diehard'></a>\n",
     "# Die Hard: Can John make it?\n",
     "\n",
     "<img src=\"http://onthesetofnewyork.com/locations/diehard3/diehard34.jpg\">\n",
@@ -1820,12 +2001,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "1. \n",
+    "\n",
+    "There was \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
