removing more unused data, added summary

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -34,7 +34,7 @@
     "* [Duration of Trip Prediction](#Duration-of-Trip-Prediction)\n",
     "* [Temporal Analysis](#Temporal-Analysis)\n",
     "* [Die Hard: Can John make it?](#diehard)\n",
-    "* [Conclusion](#Conclusion)"
+    "* [Summary](#Summary)"
    ]
   },
   {
@@ -289,7 +289,7 @@
     }
    ],
    "source": [
-    "uber = create_dataframe('uber-tlc-foil-response-master/uber-trip-data/uber-raw-data-apr14.csv','Lon','Lat',lim=200000)\n",
+    "uber = create_dataframe('uber-raw-data-apr14.csv','Lon','Lat',lim=200000)\n",
     "taxi = create_dataframe('taxi.csv','pickup_longitude','pickup_latitude',lim=200000)\n",
     "uber.head()"
    ]
@@ -1922,7 +1922,7 @@
    "source": [
     "Our results match up closely with the FiveThirtyEight [article](http://fivethirtyeight.com/features/uber-is-serving-new-yorks-outer-boroughs-more-than-taxis-are/) about this topic (even though we work with a smaller sample of the data).\n",
     "\n",
-    "Ubers are popular in the early-evening while taxi usage dips as that is the time when their shift changes.\n",
+    "**Ubers are popular in the early-evening** while taxi usage dips as that is the time when their shift changes.\n",
     "\n",
     "**Interestingly, the taxi density lags that of ubers. This could be attributed to the fact that people are able to request ubers before they are actually ready to go, hence making the process faster and trips are made earlier.**"
    ]
@@ -2004,11 +2004,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "# Summary\n",
     "\n",
-    "1. \n",
+    "As mentioned in the start, the aim of this project was to find interesting observations about the patterns of transit in New York City. Using different datasets with public transit information, available in the public domain, we have analyzed them in conjunction with each other and studied the observations in detail, enabling us to make different inferences on the usage patterns of yellow taxis by NYC commuters, how the usage differs with that of Uber along with a temporal analysis of said patterns.\n",
     "\n",
-    "There was \n"
+    "We were able to infer that the usage of Taxis decreased in certain areas with Uber's introduction into the market in 2011. With the help of heatmaps showing the decrease in usage of taxis in Manhattan areas, we deduced that the launch of Uber is a probably cause for that decrease in taxis in such areas. In addition to this, we also investigated the busiest road intersections in Manhattan and also whether taxi and uber pickups are closer in proximity to the subway station rather than away from it.\n",
+    "\n",
+    "Finally we built a linear regression model to help us predict the estimated time taken to go from a given pickup to a dropoff location. We have tried to explore which features provide the most useful information to help us accurately predict the time. Finally we applied our best model to a certain situation of a popular 90s movie (Die Hard) to prove it was indeed possible for John McClane to save NYC from a bomb!"
    ]
   },
   {
